<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_Ctrl_Alm" Id="{cd2bbfb8-56c1-4c3e-ad1d-cc225e01ab34}">
    <Declaration><![CDATA[TYPE T_Ctrl_Alm :
STRUCT
	///alarm flag array
	bol: BOOL;
	eAlmClass: E_AlmClass;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>