<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_Ctrl_CIf" Id="{0db38f0d-6499-43ff-860e-2a12297584fe}">
    <Declaration><![CDATA[TYPE T_Ctrl_CIf :
STRUCT
	Job: T_Ctrl_Job;
	Info: T_Ctrl_Info;
	SwCfg: T_Ctrl_SwCfg;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>