<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_Ctrl_Class" Id="{45328655-2545-4447-afc1-a7b3fbf177c9}">
    <Declaration><![CDATA[TYPE T_Ctrl_Class :
STRUCT
	///local test flag to supress cyclic run (for debugging after init)
	bolActivate: BOOL;
	intCmd: INT;
	intCmdLast: INT;
	eModeHistory: E_Mode;
	///local flag mode change detected
	bolChangeBackToAUTO: BOOL;
	StateMachine: T_Ctrl_Class_StateMachine;
	Alarm: T_Ctrl_Class_Alm;
	FUBInfo: T_fbInfo;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>