<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_Ctrl_Class_Alm" Id="{81d1ca23-ddae-4497-9039-52962c91d714}">
    <Declaration><![CDATA[TYPE T_Ctrl_Class_Alm :
STRUCT
	bolResetOk: BOOL;
	///flag positive check me alarm from child
	bolfp: BOOL;
	///local activ alarm class of parent ctrl
	eParent_ActivAlmClass: E_AlmClass;
	///highest local activ alarm class
	eActivAlmClass: E_AlmClass;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>