<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_fbInfo" Id="{3e363ef8-3f67-41e1-9eea-e2cd2fdeb7e5}">
    <Declaration><![CDATA[TYPE T_fbInfo :
STRUCT
	udiSample_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>