<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <GVL Name="MOD_CmdState" Id="{4dc9f8c7-93fd-4b61-ae30-366791fc781b}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	///ctrl commands definitions
	///specific commands >200 - every command has to be a even number
	///ctrl specific states definitions
	cSTA_VER_Up: INT := 201;
	cSTA_VER_Down: INT := 202;
	cSTA_WAIT_Pick: INT := 203;
	cSTA_HOR_MoveToPlace: INT := 204;
	cSTA_HOR_MoveToPick: INT := 205;
	cSTA_Finished: INT := 206;
END_VAR]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>