<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_MOD_RUN_StateMachine" Id="{aea70133-e795-406c-ac91-f028e01a175a}">
    <Declaration><![CDATA[TYPE T_MOD_RUN_StateMachine :
STRUCT
	///actual state
	intState: INT;
	strState: STRING;
	///state of last cycle
	intStateLastCycle: INT;
	///save history backup p.e. in ERROR state
	intStateHistory: INT;
	///set state for next cycle
	intStateNext: INT;
	///[ms] time in one state
	udiTimeInState_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>